<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>slam_scene_graph_package</name>
  <version>0.1.0</version>
  <description>SLAM implementation with Scene Graph integration for ROS 2</description>
  <maintainer email="sozure.synergy@gmail.com">Marshanishvili Mykhailo</maintainer>
  <license>Apache 2.0</license>
  <author email="sozure.synergy@gmail.com">Marshanishvili Mykhailo</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_depend>ignition-gazebo6</build_depend>
  <exec_depend>ignition-gazebo6</exec_depend>

  <export>  
    <build_type>ament_cmake</build_type>
  </export>
</package>